@@ -1,3 +1,11 @@
+2009-01-29  Sergio Villar Senin  <svillar@igalia.com>
+
+	* libtinymail-camel/tny-camel-store-account.c
+	(foreach_managed_folder):
+	(tny_camel_store_account_remove_folder_actual): perform a
+	weak_unref when the account is disposed or the managed folder is
+	removed
+
 2009-01-28  Jose Dapena Paz  <jdapena@igalia.com>
 
 	* libtinymail-camel/camel-lite/camel/providers/imap/camel-imap-store.c:
